--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
   </section>
   <!-- Content Section  -->
   <section class="global-section">
+
+    <h2 class="contact-haeding">Contact With Me</h2>
+    <h2 class="contact-haeding">Contact With Me</h2>
+    <h2 class="contact-haeding">Contact With Me</h2>
+    <h2 class="contact-haeding">Contact With Me</h2>
     <h2 class="contact-haeding">Contact With Me</h2>
     <form action="">
       <label for="name">Input Name</label><br>
